[refactor] split type from fielddeclaration