@@ -5,6 +5,8 @@ import cn.edu.lyun.kexin.text2pattern.pattern.Unit;
 import cn.edu.lyun.util.Pair;
 import cn.edu.lyun.util.ListHelper;
 import java.util.*;
+
+import com.github.javaparser.StaticJavaParser;
 import com.github.javaparser.ast.*;
 import com.github.javaparser.ast.body.FieldDeclaration;
 import com.github.javaparser.ast.body.VariableDeclarator;
@@ -21,7 +23,7 @@ public class FieldAST implements AST {
 		unitList.remove(0); // remove "define"
 
 		// Split modifiers part
-		Pair<List<Unit>, List<Unit>> pair = new ListHelper().splitListAtFirstAnyAndKeepAny(unitList);
+		Pair<List<Unit>, List<Unit>> pair = new ListHelper().splitList(unitList, "variable");
 		List<Unit> modifierList = pair.getFirst();
 		// TODO: support complex name case
 		if (modifierList.size() >= 2) {
@@ -37,15 +39,11 @@ public class FieldAST implements AST {
 		FieldDeclaration fieldDeclaration = new FieldDeclaration();
 		fieldDeclaration.setModifiers(modifierNodeList);
 
-		pair = new ListHelper().splitList(unitList, "variable");
-		List<Unit> typeList = pair.getFirst();
 		List<Unit> variableNameList = pair.getSecond();
 
 		VariableDeclarator variableDeclarator = new VariableDeclarator();
-		Type type = new TypeAST().generateType(typeList);
 		// TODO: 目前仅考虑非组合词的情况
 		if (variableNameList.size() == 1) {
-			variableDeclarator.setType(type);
 			variableDeclarator.setName(new SimpleName(variableNameList.get(0).getKeyword()));
 		} else {
 			System.out.println("Haven't implemented for word combined case");
@@ -62,14 +60,9 @@ public class FieldAST implements AST {
 		Unit[] units = pattern.getUnits();
 		List<Unit> unitList = new ArrayList<Unit>(Arrays.asList(units));
 		unitList.remove(0); // remove "define"
-
-		Pair<List<Unit>, List<Unit>> pair = new ListHelper().splitList(unitList, "variable");
-		List<Unit> typeList = pair.getFirst();
-		List<Unit> variableNameList = pair.getSecond();
-
-		Type type = new TypeAST().generateType(typeList);
-		VariableDeclarationExpr variableDeclarationExpr = new VariableDeclarationExpr(type,
-				variableNameList.get(0).getKeyword());
+    unitList.remove(0); // remove "variable"
+		VariableDeclarationExpr variableDeclarationExpr = new VariableDeclarationExpr(StaticJavaParser.parseType("void"),
+    unitList.get(0).getKeyword());
 
 		return new ExpressionStmt(variableDeclarationExpr);
 	}
